# CPPBoilerPlate

./: CMakeLists.txt  README.md
src/: core.hpp  defines.hpp  main.cpp
src/Log/: log.cpp  log.hpp
